@@ -789,14 +789,12 @@ bool KernAux_Multiboot2_ITag_ImageLoadBasePhysAddr_is_valid(
 
 void KernAux_Multiboot2_Header_print(
     const struct KernAux_Multiboot2_Header *multiboot2_header,
-    void (*printf)(const char *format, ...)
-    __attribute__((format(printf, 1, 2)))
+    void (*printf)(const char *format, ...) KERNAUX_PRINTF(1, 2)
 );
 
 void KernAux_Multiboot2_HTagBase_print(
     const struct KernAux_Multiboot2_HTagBase *tag_base,
-    void (*printf)(const char *format, ...)
-    __attribute__((format(printf, 1, 2)))
+    void (*printf)(const char *format, ...) KERNAUX_PRINTF(1, 2)
 );
 
 /*******************************
@@ -805,38 +803,32 @@ void KernAux_Multiboot2_HTagBase_print(
 
 void KernAux_Multiboot2_Info_print(
     const struct KernAux_Multiboot2_Info *multiboot2_info,
-    void (*printf)(const char *format, ...)
-    __attribute__((format(printf, 1, 2)))
+    void (*printf)(const char *format, ...) KERNAUX_PRINTF(1, 2)
 );
 
 void KernAux_Multiboot2_ITagBase_print(
     const struct KernAux_Multiboot2_ITagBase *tag_base,
-    void (*printf)(const char *format, ...)
-    __attribute__((format(printf, 1, 2)))
+    void (*printf)(const char *format, ...) KERNAUX_PRINTF(1, 2)
 );
 
 void KernAux_Multiboot2_ITag_BootCmdLine_print(
     const struct KernAux_Multiboot2_ITag_BootCmdLine *tag,
-    void (*printf)(const char *format, ...)
-    __attribute__((format(printf, 1, 2)))
+    void (*printf)(const char *format, ...) KERNAUX_PRINTF(1, 2)
 );
 
 void KernAux_Multiboot2_ITag_BootLoaderName_print(
     const struct KernAux_Multiboot2_ITag_BootLoaderName *tag,
-    void (*printf)(const char *format, ...)
-    __attribute__((format(printf, 1, 2)))
+    void (*printf)(const char *format, ...) KERNAUX_PRINTF(1, 2)
 );
 
 void KernAux_Multiboot2_ITag_MemoryMap_print(
     const struct KernAux_Multiboot2_ITag_MemoryMap *tag,
-    void (*printf)(const char *format, ...)
-    __attribute__((format(printf, 1, 2)))
+    void (*printf)(const char *format, ...) KERNAUX_PRINTF(1, 2)
 );
 
 void KernAux_Multiboot2_ITag_ELFSymbols_print(
     const struct KernAux_Multiboot2_ITag_ELFSymbols *tag,
-    void (*printf)(const char *format, ...)
-    __attribute__((format(printf, 1, 2)))
+    void (*printf)(const char *format, ...) KERNAUX_PRINTF(1, 2)
 );
 
 #ifdef __cplusplus
